test: align IT assertions style and parameterize name sort tests
Merge shouldSortByProcessDefinitionNameAsc and shouldSortByProcessDefinitionNameDesc
into a single @ParameterizedTest so both directions are covered with one test body.
The deployment order (reverse-alpha) is preserved for the shared setup, keeping the
ASC case non-trivially different from deployment order.

Replace chained get(i).getX().isEqualTo() assertions in all three numeric sort tests
with extracting().containsExactly() / tuple() which matches the style used in other
IT classes in the same package (e.g. ProcessDefinitionSearchIT).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>